# Stadiumv2

./: .gitignore  DOCUMENTACION_TECNICA.txt  Stadium Design System - Standalone.html  TODO.md  build.gradle  gradle.properties  gradlew  push_videos.ps1  settings.gradle
.claude/: settings.local.json
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gilbertoMora.mov  raulRangel.mov
app/src/main/cpp/: CMakeLists.txt  image_proc.cpp  image_proc.hpp  native-lib.cpp  video_engine.cpp  video_engine.hpp
app/src/main/res/drawable/: circle_ring_selected.xml  gradient_bottom.xml  gradient_top.xml  ic_check_circle.xml
app/src/main/res/layout/: activity_final.xml  activity_main.xml  activity_photo_view.xml  activity_player_selection.xml  activity_simulation.xml  item_player_circle.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
videos/: jorgeSanchez.mov  mateoChavez.mov
winClient/: .gitignore  OPTIMIZATION_GUIDE.md  SETUP.md  camera_manager.py  config.json  config.py  config_manager.py  main.py  main_window.py  network_client.py  processing_worker.py  pyrightconfig.json  qr_service.py  requirements.txt  run.bat  segmentation_engine.py  test_performance.py  theme.py  ui_components.py  verify_setup.py
winClient/assets/: players.json
winClient/engine/: mov_parser.py  network_client.py  video_overlay.py
winClient/models/: player_roster.py
winClient/screens/: __init__.py  base_screen.py  camera_preview.py  camera_screen.py  final_screen.py  loading_screen.py  photo_view.py  player_selection.py  selection_screen.py  simulation.py  welcome.py  welcome_screen.py
(+15 files in other folders)
